results/SpecGenBench/2-shot/log-StrPalindrome-2023_11_06_14_40_16.txt
public class StrPalindrome {
   
   //@ requires str != null;
   //@ ensures \result == true <==> (\forall int i; 0 <= i && i < str.length(); str.charAt(i) == str.charAt(str.length() - 1 - i));
   public boolean isPalindrome(String str) {
      String reverse = "";
      
      int length = str.length();

      //@ maintaining 0 <= i && i <= length;
      //@ maintaining reverse.equals(str.substring(i, length).reverse());
      //@ decreases i;
      for (int i = length - 1; 0 <= i; i--) {
         reverse = reverse + str.charAt(i);
      }
      
      return reverse.equals(str);
   }

}
/home/max/Documents/JMLGPT/tmp/StrPalindrome.java:11: error: cannot find symbol
      //@ maintaining reverse.equals(str.substring(i, length).reverse());
                                                             ^
  symbol:   method reverse()
  location: class String
1 error

